<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/beer8" />


    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Quest Beer"
        android:textColor="@color/colorAmber"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/findBeersButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter Zip Code"
        android:layout_centerHorizontal="true" />



    <Button
        android:id="@+id/findBeersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#1B3EB7"
        android:text="Find Pubs"
        android:textColor="@color/black"
        android:textSize="34sp" />
</RelativeLayout>



<!--    android:id="@+id/textView"-->