<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="-4dp"
        android:text="Pubs near" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="407dp"
        android:layout_height="655dp"
        android:layout_below="@+id/locationTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp" />

</RelativeLayout>